remove dynamic library target for framework

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -9,23 +9,7 @@ set(FRAMEWORK_SOURCES
 
 include_directories("include")
 
-add_library(framework_objects OBJECT ${FRAMEWORK_SOURCES} ${FRAMEWORK_HEADERS})
-add_library(framework $<TARGET_OBJECTS:framework_objects>)
-
-add_executable(framework.elf
-	$<TARGET_OBJECTS:framework_objects>
-	"src/plugin.cpp"
-)
-
-target_link_libraries(framework.elf -Wl,-q -nostdlib -nodefaultlibs)
-
-add_custom_target(framework.suprx ALL
-	COMMAND vita-elf-create -n -e ${CMAKE_CURRENT_SOURCE_DIR}/exports.yml framework.elf framework.vuprx
-	COMMAND vita-make-fself framework.vuprx framework.suprx
-	COMMAND vita-elf-export u framework.elf ${CMAKE_CURRENT_SOURCE_DIR}/exports.yml framework.json
-)
-
-add_dependencies(framework.suprx framework.elf)
+add_library(framework STATIC ${FRAMEWORK_SOURCES} ${FRAMEWORK_HEADERS})
 
 install(FILES
 	${FRAMEWORK_HEADERS}
