add stub installer executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,25 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
 
 add_subdirectory(framework)
+
+set(INSTALLER_SOURCES
+	"src/main.cpp"
+)
+
+include_directories(framework/include)
+
+add_executable(installer.elf ${INSTALLER_SOURCES})
+
+target_link_libraries(installer.elf -Wl,-q
+	framework
+	pthread
+	SceDisplay_stub
+)
+
+add_custom_target(installer.fself ALL
+	COMMAND vita-elf-create installer.elf installer.velf
+	COMMAND vita-make-fself installer.velf installer.fself
+)
+
+add_dependencies(installer.fself installer.elf)
+add_dependencies(installer.elf framework)
