add vita platform screen stub

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -13,6 +13,7 @@ set(FRAMEWORK_SOURCES
 	"src/taskscheduler.cpp"
 	"src/guiapplication.cpp"
 	"src/vitainput.cpp"
+	"src/vitascreen.cpp"
 )
 
 include_directories("include")
