add GxmShaderProgram - code for applying shaders to a context

--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -17,6 +17,7 @@ set(FRAMEWORK_SOURCES
 	"src/gxmshader.cpp"
 	"src/gxmvertexshader.cpp"
 	"src/gxmfragmentshader.cpp"
+	"src/gxmshaderprogram.cpp"
 )
 
 include_directories(include)
