add skeleton of installer view

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory(framework)
 
 set(INSTALLER_SOURCES
 	"src/main.cpp"
+	"src/installerview.cpp"
 )
 set(INSTALLER_SHADERS
 	"shaders/clear.vert.cg"
