refactor shaders into proper resources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ add_definitions(-Wl,-q -Wall -Werror -pedantic -Os)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z")
 
 add_subdirectory(framework)
+add_subdirectory(shaders)
 
 set(INSTALLER_SOURCES
 	"src/main.cpp"
@@ -18,70 +19,13 @@ set(INSTALLER_SOURCES
 	"src/camera.cpp"
 	"src/animatedbackground.cpp"
 	"src/sysmodule.cpp"
+	"src/resource.cpp"
 )
-set(INSTALLER_SHADERS
-	"shaders/clear.vert.cg"
-	"shaders/clear.frag.cg"
-	"shaders/animbg.vert.cg"
-	"shaders/animbg.frag.cg"
-)
-
-set(INSTALLER_SHADER_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/shaders)
-file(MAKE_DIRECTORY ${INSTALLER_SHADER_OUTPUT_DIR})
-
-function(CompileShaderTargets)
-	foreach(shader ${ARGN})
-		get_filename_component(name ${shader} NAME_WE)
-		get_filename_component(ext ${shader} EXT)
-		string(SUBSTRING ${ext} 1 -1 ext)
-		get_filename_component(type ${ext} NAME_WE)
-		set(resourceName ${name}.${type}.gxp)
-
-		if (${type} STREQUAL "vert")
-			set(type "vertex")
-		elseif(${type} STREQUAL "frag")
-			set(type "fragment")
-		endif()
-
-		add_custom_target(
-			${resourceName}.c ALL
-			COMMAND runshacc --${type} ${CMAKE_CURRENT_SOURCE_DIR}/${shader} ${resourceName}
-			COMMAND xxd -i ${resourceName} ${CMAKE_CURRENT_BINARY_DIR}/${resourceName}.c
-			COMMENT "Compiling ${type} shader ${resourceName}"
-			WORKING_DIRECTORY ${INSTALLER_SHADER_OUTPUT_DIR}
-		)
-
-		add_dependencies(framework ${resourceName}.c)
-	endforeach(shader)
-endfunction()
-
-function(GetShaderResourceFilenames outfilenames)
-	set(out)
-
-	foreach(shader ${ARGN})
-		get_filename_component(name ${shader} NAME_WE)
-		get_filename_component(ext ${shader} EXT)
-		string(SUBSTRING ${ext} 1 -1 ext)
-		get_filename_component(type ${ext} NAME_WE)
-		set(resourceName ${name}.${type}.gxp.c)
-
-		if (NOT ${type} STREQUAL "vert" AND NOT ${type} STREQUAL "frag")
-			message(FATAL_ERROR "Unknown shader type '" ${type} "'. Expected 'vert' or 'frag'.")
-		endif()
-
-		set(out ${out} ${resourceName})
-		set_source_files_properties(${resourceName} PROPERTIES GENERATED TRUE)
-	endforeach(shader)
-
-	set(${outfilenames} ${out} PARENT_SCOPE)
-endfunction()
-
-GetShaderResourceFilenames(INSTALLER_SHADER_SOURCES ${INSTALLER_SHADERS})
 
 include_directories(framework/include)
+include_directories(${CMAKE_BINARY_DIR}/auto)
 
-add_executable(installer.elf ${INSTALLER_SOURCES} ${INSTALLER_SHADER_SOURCES})
-CompileShaderTargets(${INSTALLER_SHADERS})
+add_executable(installer.elf ${INSTALLER_SOURCES} auto/generatedresources.cpp)
 
 target_link_libraries(installer.elf -Wl,-q
 	framework
@@ -93,10 +37,15 @@ target_link_libraries(installer.elf -Wl,-q
 	-Wl,--whole-archive pthread -Wl,--no-whole-archive
 )
 
+add_custom_command(
+	OUTPUT auto/generatedresources.cpp
+	DEPENDS ${CMAKE_SOURCE_DIR}/tools/resource2cpp.py shaders ${CMAKE_BINARY_DIR}/shaders/shaders.rsc
+	COMMAND python ${CMAKE_SOURCE_DIR}/tools/resource2cpp.py auto/generatedresources.cpp auto/generatedresources.h shaders/shaders.rsc
+)
+
 add_custom_target(installer.fself ALL
 	COMMAND vita-elf-create installer.elf installer.velf
 	COMMAND vita-make-fself installer.velf installer.fself
 	DEPENDS installer.elf
 )
 
-add_dependencies(installer.elf framework)
