add number animation to compile list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ set(INSTALLER_SOURCES
 	"src/geometryrenderer.cpp"
 	"src/text.cpp"
 	"src/fpscounter.cpp"
+	"src/numberanimation.cpp"
 )
 
 include_directories(3rdparty/include)
