Implement install option page as a menu component

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ set(INSTALLER_SOURCES
 	"src/installpage.cpp"
 	"src/successpage.cpp"
 	"src/failurepage.cpp"
+	"src/menu.cpp"
 )
 
 include_directories(3rdparty/include)
